--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:27.+'
-    compile project(':dashboarddevices')
+    compile project(':dashboardview')
 }
