--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@
 #
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx1536m
+org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_112
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 #
